# CORAL-v4

./: .gitignore  CLAUDE.md  CLAUDE_CODE_PROMPT.md  CORAL_Architecture_Spec_v4.md  CORAL_v4_Build_Plan.md  README.md  audit_report_session_J.md  pyproject.toml  requirements.txt
configs/: exp1_baseline.yaml  exp1_no_pc.yaml  exp2_baseline_30m.yaml  exp3_v5_30m.yaml  phase1_baseline_n2.yaml  phase1_baseline_n2_deep.yaml  phase1_baseline_no_pc.yaml  phase1_deep_gradient.yaml  phase1_maze_baseline.yaml  phase1_maze_reference.yaml  phase1_n1_partial_grad.yaml  phase1_n2_partial_grad.yaml  phase3a_crystal_simple.yaml  phase3b_crystal_multihead.yaml  phase3c_crystal_decrystal.yaml  phase4_amort_no_crystal.yaml  phase4_amort_with_crystal.yaml
coral/: __init__.py  config.py
docs/: ARC_adapter_audit.md  CORAL_Architecture_Spec_v4.2.md  CORAL_Architecture_Spec_v4_2_Addendum.md  CORAL_v4.2_Build_Plan.md  CORAL_v4.2_Claude_Code_Prompts.md  CORAL_v4_Handoff_Note.md  CORAL_v4_Session2_Handoff.md  plateau_audit.md  plateau_diagnosis.md  trm_comparison_audit.md
scripts/: codebook_analysis.py  collect_states.py  diagnose_rank_collapse.py  diagnostic_no_pc.py  diagnostic_pc_analysis.py  diagnostic_precision.py  evaluate.py  evaluate_pareto.py  train.py
tests/: test_adapters.py  test_arc_dataset.py  test_backbone.py  test_baseline_mode.py  test_configs.py  test_coral_core.py  test_crystallisation.py  test_diagnostics.py  test_eval_metrics.py  test_evaluator.py  test_forward_backward.py  test_full_mode.py  test_input_injection.py  test_local_attention_bias.py  test_losses.py  (+12 more)
(+24 files in other folders)
